--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=gandom
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:jBdsgN6JAKykSPVNsVu507FNZqg5z0JlJfvq3Q7Ap6U=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://gandom.test
 
+SANCTUM_STATEFUL_DOMAINS=http://gandom.test,localhost,localhost:3000,127.0.0.1,127.0.0.1:8000,::1
+SESSION_DOMAIN=.gandom.test
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
@@ -11,14 +13,14 @@ LOG_LEVEL=debug
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=gandom
+DB_DATABASE=gandomdb
 DB_USERNAME=root
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 FILESYSTEM_DRIVER=local
-QUEUE_CONNECTION=sync
+QUEUE_CONNECTION=database
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
 
@@ -29,13 +31,11 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_MAILER=smtp
-MAIL_HOST=mailhog
-MAIL_PORT=1025
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
-MAIL_FROM_ADDRESS=null
-MAIL_FROM_NAME="${APP_NAME}"
+MAIL_HOST=smtp.mailtrap.io
+MAIL_PORT=2525
+MAIL_USERNAME=b218b0f79b3677
+MAIL_PASSWORD=6df669e43bc956
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
